[gd_scene load_steps=9 format=3 uid="uid://cfy243i0kd1cb"]

[ext_resource type="Script" path="res://river_painting.gd" id="1_kb2tr"]
[ext_resource type="Texture2D" uid="uid://dui4i7blhdwa1" path="res://art/IMG_2641.PNG" id="1_ls2pe"]
[ext_resource type="Texture2D" uid="uid://bwsn7jxnip1o3" path="res://art/ph-opened case.PNG" id="2_gkvoh"]
[ext_resource type="Texture2D" uid="uid://ds552hk8olw1w" path="res://art/ph-closed case.PNG" id="4_spff8"]
[ext_resource type="Texture2D" uid="uid://bipyf48vqp6tf" path="res://art/Key1.png" id="5_7mkai"]
[ext_resource type="Script" path="res://Scripts/item.gd" id="6_dcdmc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gui02"]
size = Vector2(149, 86.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_c7upa"]
radius = 329.763

[node name="RiverPainting" type="Node2D"]
script = ExtResource("1_kb2tr")

[node name="TextureRect" type="TextureRect" parent="."]
offset_top = 1.0
offset_right = 1148.0
offset_bottom = 651.0
texture = ExtResource("1_ls2pe")
expand_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(637, 487)
texture = ExtResource("2_gkvoh")

[node name="Area2D" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(-44, 6)
shape = SubResource("RectangleShape2D_gui02")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(637, 487)
texture = ExtResource("4_spff8")

[node name="closed" type="Area2D" parent="Sprite2D2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D2/closed"]
position = Vector2(-44, -26.25)
shape = SubResource("RectangleShape2D_gui02")

[node name="key" type="Sprite2D" parent="."]
position = Vector2(509, 252)
scale = Vector2(0.115885, 0.114583)
texture = ExtResource("5_7mkai")
script = ExtResource("6_dcdmc")

[node name="key area" type="Area2D" parent="key"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="key/key area"]
position = Vector2(-43.1461, -34.9092)
shape = SubResource("CircleShape2D_c7upa")

[connection signal="input_event" from="Sprite2D/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Sprite2D/Area2D" to="." method="change_cursor"]
[connection signal="mouse_exited" from="Sprite2D/Area2D" to="." method="change_cursor_back"]
[connection signal="input_event" from="Sprite2D2/closed" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Sprite2D2/closed" to="." method="change_cursor"]
[connection signal="mouse_exited" from="Sprite2D2/closed" to="." method="change_cursor_back"]
[connection signal="input_event" from="key/key area" to="key" method="_on_key_area_input_event"]
